--- a/cf_stock_bat100_final/views/stock_move_line_views.xml
+++ b/cf_stock_bat100_final/views/stock_move_line_views.xml
@@ -28,7 +28,7 @@
     </record>
 
     <!-- ==========================
-         WIZARD DE OPERACIONES DETALLADAS
+         WIZARD DE OPERACIONES DETALLADAS (RECEPCIONES / ENTREGAS)
          ========================== -->
     <record id="view_move_line_detailed_operations_bat100" model="ir.ui.view">
         <field name="name">stock.move.line.detailed.operations.bat100</field>
@@ -42,7 +42,7 @@
     </record>
 
     <!-- ==========================
-         VISTA DE LOTE (IMEI)
+         FORMULARIO DE LOTE (IMEI)
          ========================== -->
     <record id="view_stock_lot_form_bat100" model="ir.ui.view">
         <field name="name">stock.lot.form.bat100</field>
@@ -55,17 +55,18 @@
         </field>
     </record>
 
-   <!-- ==========================
-     FILTRO BAT100 EN LOTES
-     ========================== -->
-<record id="view_stock_lot_search_bat100" model="ir.ui.view">
-    <field name="name">stock.lot.search.bat100</field>
-    <field name="model">stock.lot</field>
-    <field name="inherit_id" ref="stock.view_lot_search"/>
-    <field name="arch" type="xml">
-        <xpath expr="//filter[@name='serial']" position="after">
-            <filter name="bat100_true" string="BAT100" domain="[('bat100','=',True)]"/>
-        </xpath>
-    </field>
-</record>
+    <!-- ==========================
+         NUEVA VISTA DE BÚSQUEDA PARA LOTES (SIN HEREDAR)
+         ========================== -->
+    <record id="view_stock_lot_search_bat100" model="ir.ui.view">
+        <field name="name">stock.lot.search.bat100</field>
+        <field name="model">stock.lot</field>
+        <field name="arch" type="xml">
+            <search string="Buscar Números de Serie / Lotes">
+                <field name="name"/>
+                <field name="product_id"/>
+                <filter name="bat100_true" string="BAT100" domain="[('bat100','=',True)]"/>
+            </search>
+        </field>
+    </record>
 </odoo>
