--- a/cf_stock_bat100_final/views/stock_lot_views.xml
+++ b/cf_stock_bat100_final/views/stock_lot_views.xml
@@ -1,21 +1,9 @@
 <odoo>
-    <!-- Vista formulario del número de serie/lote -->
+    <!-- Formulario de Lotes (IMEI) con campo BAT100 -->
     <record id="view_stock_lot_form_bat100" model="ir.ui.view">
         <field name="name">stock.lot.form.bat100</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='product_id']" position="after">
-                <field name="bat100"/>
-            </xpath>
-        </field>
-    </record>
-
-    <!-- Vista lista de lotes/series -->
-    <record id="view_stock_lot_tree_bat100" model="ir.ui.view">
-        <field name="name">stock.lot.tree.bat100</field>
-        <field name="model">stock.lot</field>
-        <field name="inherit_id" ref="stock.view_production_lot_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="bat100" widget="boolean_toggle"/>
@@ -23,12 +11,12 @@
         </field>
     </record>
 
-    <!-- Nueva vista de búsqueda (sin herencia) -->
+    <!-- Vista de búsqueda independiente -->
     <record id="view_stock_lot_search_bat100" model="ir.ui.view">
         <field name="name">stock.lot.search.bat100</field>
         <field name="model">stock.lot</field>
         <field name="arch" type="xml">
-            <search string="Buscar Números de Serie">
+            <search string="Buscar Números de Serie / Lotes">
                 <field name="name"/>
                 <field name="product_id"/>
                 <filter name="bat100_true" string="BAT100" domain="[('bat100','=',True)]"/>
