--- a/cf_stock_bat100_persistente_v5/views/stock_move_line_views.xml
+++ b/cf_stock_bat100_persistente_v5/views/stock_move_line_views.xml
@@ -1,4 +1,5 @@
 <odoo>
+    <!-- Vista de lista (árbol) de líneas de movimiento -->
     <record id="view_move_line_tree_bat100" model="ir.ui.view">
         <field name="name">stock.move.line.tree.bat100</field>
         <field name="model">stock.move.line</field>
@@ -10,6 +11,7 @@
         </field>
     </record>
 
+    <!-- Vista de formulario de línea de movimiento -->
     <record id="view_stock_move_line_form_bat100" model="ir.ui.view">
         <field name="name">stock.move.line.form.bat100</field>
         <field name="model">stock.move.line</field>
@@ -21,6 +23,7 @@
         </field>
     </record>
 
+    <!-- Vista del popup de operaciones detalladas -->
     <record id="view_move_line_detailed_operations_bat100" model="ir.ui.view">
         <field name="name">stock.move.line.detailed.operations.bat100</field>
         <field name="model">stock.move.line</field>
@@ -32,17 +35,20 @@
         </field>
     </record>
 
+    <!-- Vista del formulario de lotes -->
     <record id="view_stock_lot_form_bat100" model="ir.ui.view">
         <field name="name">stock.lot.form.bat100</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_id']" position="after">
-                <field name="bat100" widget="boolean_toggle"/>
+                <!-- Campo BAT100 editable siempre -->
+                <field name="bat100" widget="boolean_toggle" options="{'terminology': 'switch'}" attrs="{'readonly': False}"/>
             </xpath>
         </field>
     </record>
 
+    <!-- Vista de búsqueda de lotes -->
     <record id="view_stock_lot_search_bat100" model="ir.ui.view">
         <field name="name">stock.lot.search.bat100</field>
         <field name="model">stock.lot</field>
@@ -51,6 +57,7 @@
                 <field name="name"/>
                 <field name="product_id"/>
                 <filter name="bat100_true" string="BAT100" domain="[('bat100','=',True)]"/>
+                <filter name="bat100_false" string="Sin BAT100" domain="[('bat100','=',False)]"/>
             </search>
         </field>
     </record>
