--- a/cf_stock_bat100_persistente_v5/views/stock_move_line_views.xml
+++ b/cf_stock_bat100_persistente_v5/views/stock_move_line_views.xml
@@ -35,15 +35,15 @@
         </field>
     </record>
 
-    <!-- Vista del formulario de lotes -->
+    <!-- Vista del formulario de lotes (editable) -->
     <record id="view_stock_lot_form_bat100" model="ir.ui.view">
         <field name="name">stock.lot.form.bat100</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_id']" position="after">
-                <!-- Campo BAT100 editable siempre -->
-                <field name="bat100" widget="boolean_toggle" options="{'terminology': 'switch'}" attrs="{'readonly': False}"/>
+                <!-- Campo BAT100 editable -->
+                <field name="bat100" widget="boolean_toggle" options="{'terminology': 'switch'}" readonly="0"/>
             </xpath>
         </field>
     </record>
