--- a/cf_battery_status/views/stock_production_lot_views.xml
+++ b/cf_battery_status/views/stock_production_lot_views.xml
@@ -1,11 +1,10 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- Formulario del número de serie/lote con botón BAT100 -->
-    <record id="view_stock_production_lot_form_bat100" model="ir.ui.view">
-        <field name="name">stock.production.lot.form.bat100</field>
-        <field name="model">stock.production.lot</field>
-        <field name="inherit_id" ref="stock.view_production_lot_form"/>
+    <record id="view_stock_lot_form_bat100" model="ir.ui.view">
+        <field name="name">stock.lot.form.bat100</field>
+        <field name="model">stock.lot</field>
+        <field name="inherit_id" ref="stock.view_stock_lot_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='name']" position="after">
                 <button name="action_toggle_bat100"
@@ -23,10 +22,10 @@
     </record>
 
     <!-- Vista lista: mostrar estado BAT100 -->
-    <record id="view_stock_production_lot_tree_bat100" model="ir.ui.view">
-        <field name="name">stock.production.lot.tree.bat100</field>
-        <field name="model">stock.production.lot</field>
-        <field name="inherit_id" ref="stock.view_production_lot_tree"/>
+    <record id="view_stock_lot_tree_bat100" model="ir.ui.view">
+        <field name="name">stock.lot.tree.bat100</field>
+        <field name="model">stock.lot</field>
+        <field name="inherit_id" ref="stock.view_stock_lot_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="x_bat100" widget="boolean_toggle" string="🔋 BAT100"/>
