--- a/cf_battery_button_v3_1/views/stock_lot_views.xml
+++ b/cf_battery_button_v3_1/views/stock_lot_views.xml
@@ -1,6 +1,7 @@
 <odoo>
-    <record id="view_stock_lot_form_inherit_bat100_v3_1" model="ir.ui.view">
-        <field name="name">stock.lot.form.inherit.bat100.v3.1</field>
+    <!-- Vista de formulario de número de serie -->
+    <record id="view_stock_lot_form_inherit_bat100_v3_2" model="ir.ui.view">
+        <field name="name">stock.lot.form.inherit.bat100.v3.2</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
@@ -29,11 +30,11 @@
         </field>
     </record>
 
-    <!-- Vista lista editable -->
-    <record id="view_stock_lot_tree_inherit_bat100_v3_1" model="ir.ui.view">
-        <field name="name">stock.lot.tree.inherit.bat100.v3.1</field>
+    <!-- Vista lista editable (Odoo 17 usa stock.view_lot_tree_default) -->
+    <record id="view_stock_lot_tree_inherit_bat100_v3_2" model="ir.ui.view">
+        <field name="name">stock.lot.tree.inherit.bat100.v3.2</field>
         <field name="model">stock.lot</field>
-        <field name="inherit_id" ref="stock.view_lot_tree"/>
+        <field name="inherit_id" ref="stock.view_lot_tree_default"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='name']" position="after">
                 <field name="x_bat100" widget="boolean_toggle"/>
@@ -41,9 +42,9 @@
         </field>
     </record>
 
-    <!-- Vista kanban -->
-    <record id="view_stock_lot_kanban_inherit_bat100_v3_1" model="ir.ui.view">
-        <field name="name">stock.lot.kanban.inherit.bat100.v3.1</field>
+    <!-- Vista Kanban -->
+    <record id="view_stock_lot_kanban_inherit_bat100_v3_2" model="ir.ui.view">
+        <field name="name">stock.lot.kanban.inherit.bat100.v3.2</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_lot_kanban"/>
         <field name="arch" type="xml">
